<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            app:elevation="0dp"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content"
            >
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:layout_width="match_parent"
            android:fitsSystemWindows="true"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SignUp."
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/productsans_medium"
                    android:textSize="30sp"
                    android:layout_marginBottom="25dp"
                    />

                <TextView
                    android:visibility="gone"
                    android:layout_marginBottom="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/deepblue"
                    android:fontFamily="@font/productsans_regular"
                    android:text="You are 1 step from saving our eco system"
                    android:textSize="12dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstname"
                    app:boxBackgroundColor="#EEEE"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_marginBottom="15dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="#EEEE"
                    android:hint="@string/lastname"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_marginBottom="15dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    app:boxBackgroundColor="#EEEE"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_marginBottom="15dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Phonenumber"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:boxBackgroundColor="#EEEE"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_marginBottom="15dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emial"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:boxBackgroundColor="#EEEE"
                    app:passwordToggleEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_marginBottom="16dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gender"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"
                    android:textColor="@color/deepblue"/>

                <RadioGroup
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"/>

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"/>
                </RadioGroup>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/signup"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="SignUp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:visibility="gone"
                    android:id="@+id/progressbar"
                    android:layout_width="46dp"
                    android:layout_height="29dp"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/white"
                    android:maxWidth="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/signup"
                    app:layout_constraintEnd_toEndOf="@+id/signup"
                    app:layout_constraintHorizontal_bias="0.65"
                    app:layout_constraintStart_toStartOf="@+id/signup"
                    app:layout_constraintTop_toTopOf="@+id/signup" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>